# LIA-Linux-Intelligence-Assistant-

./: .gitignore  LIA-requirements.txt  LIA-task-breakdown.txt  LICENSE  README.md  README_UTF8.md  config.yaml  install.bat  install.ps1  install.sh  lia.py  pyproject.toml  requirements.txt  wia.py
agents/: base_agent.py  connection_agent.py  database_agent.py  docker_agent.py  file_agent.py  git_agent.py  mock_agent.py  net_agent.py  package_agent.py  sys_agent.py  web_agent.py
core/: audit.py  config.py  context_engine.py  errors.py  explain.py  feedback.py  guardian.py  llm_bridge.py  logger.py  memory_manager.py  orchestrator.py  os_layer.py  permissions.py  safety.py  sandbox.py  telemetry.py  workflow_engine.py
docs/: AGENTS.md  ARCHITECTURE.md  CODE_REVIEW.md  SECURITY.md  WORKFLOWS.md
memory/: __init__.py  indexer.py  vector_store.py
packaging/: PKGBUILD  build_deb.sh  lia.desktop
tests/: run_tests.py
ui/: gui.py  tui.py
workflows/: db_maintenance.yaml  devops_morning.yaml  friday_routine.yaml
